# rs_pxe

./: .envrc  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  dnsmasq.sh  flake.nix  ipxe.dsk  ipxe.iso  ipxe.pxe  qemu-pxe.sh  run.sh  test.sh
assets/: amd_efi_dhcp.pcapng  crash_in_dhcp_request.pcapng  dhcpcd.conf  full_two_stage_boot.pcapng  intel_bios_dhcp.pcapng  intel_bios_tftp.pcapng  intel_dhcp.pcapng  intel_efi_dhcp.pcapng  intel_efi_tftp.pcapng  intel_tftp.pcapng  ipxe.dsk  ipxe.efi  ipxe.pxe  ipxe_corrupted_packet.pcapng  ipxe_dhcp.pcapng  ipxe_full.pcapng  ipxe_tftp.pcapng  kernel.elf  uefi_tftp_pixiecore.pcapng
src/: cli_opts.rs  construct.rs  dhcp_options.rs  error.rs  lib.rs  main.rs  parse.rs  tftp_state.rs  udp_port_check.rs  utils.rs
src/dhcp/: construct.rs  error.rs  mod.rs  options.rs  parse.rs  socket.rs  utils.rs
src/tests/: mod.rs  pxe_tests.rs  test_utils.rs
src/tftp/: construct.rs  error.rs  macros.rs  mod.rs  parse.rs  socket.rs  utils.rs
src/utils/: dhcp_froms.rs  mod.rs
tests/: intel_pxe.rs  pxe.rs
