[package]
name = "rs_pxe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
log = { version = "0.4.17" }
env_logger = "0.10.0"
uuid = "1.3.0"
smoltcp = { path="./external/smoltcp" }
rand = "0.8.5"